tests/comp/sem/valid/pass_null_and_new.mj
class A {

	public int foo(A a) {
	}

	public int test() {
		foo(null);
		foo(new A());
	}

	public static void main(String[] args) {
	}

}
