tests/comp/sem/invalid/not_ref.mj
class A {

	public void test(A foo) {
		/*** ! ***/ foo;
	}

	public static void main(String[] args) {
	}

}
